# rust_oauth2_server

./: .dockerignore  .gitignore  AGENTIC_QUICKSTART.md  Cargo.toml  Dockerfile  Dockerfile.ci  Dockerfile.prebuilt  README.md  SECURITY.md  SUMMARY.md  TODO.md  audit.toml  docker-compose.yml  flyway.conf  kind-config.yaml  mkdocs.yml
.github/agents/: database.md  development.md  operations.md  security.md
.github/workflows/: ci.yml  e2e-kind.yml
docs/: index.md
docs/api/: endpoints.md
docs/architecture/: actors.md  database.md  overview.md
docs/deployment/: docker.md
docs/development/: contributing.md
docs/flows/: authorization-code.md  client-credentials.md  password.md  refresh-token.md
docs/getting-started/: configuration.md  installation.md  quickstart.md  social-login-setup.md
docs/operations/: runbooks.md
k8s/: README.md
k8s/base/: configmap-migrations.yaml  configmap.yaml  deployment.yaml  flyway-migration-job.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  postgres-pvc.yaml  postgres-service.yaml  postgres-statefulset.yaml  rbac.yaml  secret.yaml  service-nodeport.yaml  service.yaml
mcp-server/: .env.example  README.md  package.json
mcp-server/src/: index.js
migrations/sql/: V1__create_clients_table.sql  V2__create_users_table.sql  V3__create_tokens_table.sql  V4__create_authorization_codes_table.sql  V5__insert_default_data.sql  V6__make_tokens_user_id_nullable.sql
rustdoc/: crates.js  help.html  settings.html  src-files.js
rustdoc/rust_oauth2_server/: all.html  fn.admin_dashboard.html  fn.error_page.html  fn.main.html  index.html  sidebar-items.js  struct.ApiDoc.html
rustdoc/search.index/: 009b5358cb0c.js  0119a08b5241.js  023d26bc9159.js  0257d232b6c2.js  046414d78162.js  05b320fa7748.js  062cc79307a3.js  073d9d8dfc92.js  07ae6d3104dc.js  07ed57b77fd4.js  07f6776f433a.js  0b13c5109d50.js  0d91257d63b4.js  0db0f0c99e84.js  0eac749e8f3e.js  10710f6fd25e.js  143a6d7b5e4d.js  1457437aa658.js  15370652ba93.js  16f8d0335407.js  1c6dc0036ca5.js  1c8bd11cc12c.js  1c8f582f65b9.js  1cdc97b27aae.js  1ef8d40bd691.js  1f4dd389181b.js  20a56c5d371f.js  217428f305d0.js  222667756715.js  22685433e1ec.js  (+92 more)
scripts/: e2e_kind.sh  migrate.sh
src/: lib.rs  main.rs  metrics.rs  telemetry.rs
templates/: admin_dashboard.html
tests/: bdd.rs  migrations_postgres.rs  unit_tests.rs
(+250 files in other folders)
